# pathfinding

./: .gitignore  CMakeLists.txt  Makefile  README.md  bfs.cpp  bfs.hpp  coord.cpp  coord.hpp  event.hpp  expected.hpp  main.cpp  matrix.hpp  maze.hpp  perfect_background.txt  pfalgorithm.cpp  pfalgorithm.hpp  random.sh  term.cpp  term.hpp
datasets/: 26.txt  36.txt  38.txt  72.txt
src/: console_printer.cpp  console_printer.hpp  coord.cpp  main.cpp  matrix.hpp  maze.cpp  maze.hpp  observable.hpp  opts.cpp  opts.hpp  pf_algorithm.cpp  pf_algorithm.hpp  printer.cpp  printer.hpp  runner.cpp  runner.hpp
src/algorithms/: astar.cpp  astar.hpp  bfs.cpp  bfs.hpp  dfs.cpp  dfs.hpp  greedy.cpp  greedy.hpp  pf_algorithm.cpp  pf_algorithm.hpp  pfalgorithm.cpp  pfalgorithm.hpp  rands.cpp  rands.hpp
src/io/: printer.cpp  printer.hpp  term.cpp  term.hpp
src/observers/: delayer.cpp  delayer.hpp  statistics.cpp  statistics.hpp
src/options/: opt_neighborhood_order.cpp  opt_neighborhood_order.hpp  opt_seed.cpp  opt_seed.hpp  opt_sleep_time.cpp  opt_sleep_time.hpp  opt_util.cpp  opt_util.hpp  opts.cpp  opts.hpp  opts_concepts.hpp  opts_impl.hpp
src/options/concrete_options/: help.cpp  help.hpp  opt_neighborhood_order.cpp  opt_neighborhood_order.hpp  opt_seed.cpp  opt_seed.hpp  opt_sleep_time.cpp  opt_sleep_time.hpp
src/utility/: event.hpp  expected.hpp  fwd.hpp  overload.hpp  rgb.hpp  type_list.hpp  utility.hpp  zip_view.hpp
